--- a/appspec.yml
+++ b/appspec.yml
@@ -5,3 +5,7 @@ files:
     destination: /var/www/html/
 
 file_exists_behavior: OVERWRITE
+
+Hooks:
+  - BeforeInstall: scripts/before_install.sh
+  - AfterInstall: scripts/after_install.sh
